--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
 
 ###> symfony/framework-bundle ###
-/.env
-/.env.local
-/.env.local.php
-/.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /src/.preload.php
@@ -16,3 +12,11 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+###> perso ###
+/.env
+/.env.local
+/.env.local.php
+/.env.*.local
+/mig/
+###< symfony/framework-bundle ###
