creation of restart_number to count resets by user an by story, add of wip fonts, robots.txt, admin dashboard reviews

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,3 +37,8 @@ security:
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/profile, roles: ROLE_USER }
+
+    role_hierarchy:
+        ROLE_EDITOR: ROLE_USER
+        ROLE_MODERATOR: ROLE_EDITOR
+        ROLE_ADMIN: ROLE_MODERATOR
